Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-33112

Auto-format on file save for QML/JS editing breaks the formatting of .js files.

XMLWordPrintable

    • Windows
    • 10faa44b8 (18.0)

      When auto-format on file save is enabled for QML/JS editing, saving a .js file after making changes may distort or break the code formatting.

      To reproduce the issue:

      • Enable "auto format on file save" from Preferences->Qt Quick->QML/JS Editing.
      • Open the attached file with Qt Creator.
      • Edit the file and then save.

      The original code.

      class Foo {
          constructor(window) {
              
           }
          
      } 

      The saved file output:

      constructorfunction (window) {} 

        For Gerrit Dashboard: QTCREATORBUG-33112
        # Subject Branch Project Status CR V

            semih.yavuz Semih Yavuz
            mahdi.belila Mehdi Belila
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes