qmljsreformatter: fix formatting of js class constructor

PatternProperty handling in the reformatter did not account for the
different syntax used by class methods/getters/setters vs plain
function definitions. Add method definition handler inspired from
qmlformat.

Fixes: QTCREATORBUG-33112
Change-Id: Ic4294caf7d45aba07dfe1f1cf1399fb95a06d0d3
Reviewed-by: hjk <hjk@qt.io>