tests/auto/qml/reformatter/construct.formatted.js
@@ -1,0 +1,8 @@
+class Foo {
+    constructor(window) {
+        const a = 10
+        const b = 20
+    }
+
+    constructor() {}
+}
